# TensorRT-Server

./: .clang-format  CMakeLists.txt  README.md  buffer_queue.h  common.h  main.cc  tensor.h  trt_engine.cc  trt_engine.h  trt_plugin.h  trt_utils.h
tensorrt-py/: model.py  onnx-trt.py  trt_model.py
tensorrt_api/: CMakeLists.txt  README.md
tensorrt_api/src/: engine.cpp  engine.h  main.cpp
tensorrt_py/: trt_model.py  trt_util.py
test/: CMakeLists.txt  test_trt_engine.cc
